# IBLGF-AMR

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user2  CMakeLists.txt_backup  Dockerfile.amrex  Doxygen  GPU_ACCELERATION.md  GPU_IMPLEMENTATION_SUMMARY.md  GPU_QUICKSTART.md  GPU_QUICK_REFERENCE.md  GPU_SOLVER_SUMMARY.md  LICENSE  Makefile  Makefile.user_example  README.md  bitmasks.hpp  context.md  docker_iblgf.sh  docker_iblgf_copy.sh  global.hpp  ibl.sh  iblgf.sh  iblgf_copy.sh  key.hpp  leaf.hpp  linear_tree.hpp  main.cpp  read_fft_count.py  simulation.hpp  types.hpp  vector.hpp
docs/: CMakeLists.txt  Doxyfile  GPU_IMPLEMENTATION.md  conf.py  index.html  index.rst  requirements.txt
docs/doxyout/: Doxyfile
docs/source/: about_doc.rst  example_docstring.rst  getting_started.rst
setups/poissonProblem/: CMakeLists.txt  configFile  main.cpp  p_fmm_rndm.hpp  p_fmm_sin.hpp  poissonProblem.hpp  poissonProblem_bak.hpp
test/server_client/: CMakeLists.txt
tests/: CMakeLists.txt
tests/MKLJacobian/: CMakeLists.txt  MKLJacobian.cpp  MKLJacobianTest.hpp
tests/MKLNewton/: CMakeLists.txt  MKLNewton.cpp  MKLNewtonTest.hpp
tests/MKLPoissonTest/: CMakeLists.txt  MKLPoisson.cpp  MKLPoissonTest.hpp
tests/MKLSolverTest/: CMakeLists.txt  MKLSolver.cpp  MKLSolverTest.hpp
tests/MPI_FFT/: CMakeLists.txt  MPI_FFT.cpp  vortexrings.hpp
tests/NewtonIteration/: CMakeLists.txt  NewtonIteration.cpp  NewtonIterationTest.hpp
tests/NewtonJacobianSolveTest/: CMakeLists.txt  NewtonJacobianSolve.cpp  NewtonJacobianSolveTest.hpp
tests/NewtonOperatorTest/: CMakeLists.txt  NewtonOperator.cpp  NewtonOperatorTest.hpp
tests/OMP_MPI_test/: CMakeLists.txt  OMP_MPI.cpp  ns_amr_lgf.hpp
tests/OscillatingAirfoil/: CMakeLists.txt  OscillatingAirfoil.cpp  OscillatingAirfoil.hpp
tests/PETScSpectralMatrixTest/: CMakeLists.txt  PETScSpectralMatrix.hpp  PETScSpectralMatrixTest.cpp  SLEPcTest.hpp
tests/PETscJacobian/: CMakeLists.txt  PETscJacobian.cpp  PETscJacobian.hpp
tests/PETscPoissonTest/: CMakeLists.txt  PETscPoisson.cpp  PETscPoissonTest.hpp
tests/Poisson2D/: CMakeLists.txt  configFile  poisson2D.cpp  vortexrings.hpp
tests/QR_2D/: CMakeLists.txt  QR_2D.cpp  QR_2D.hpp
tests/SLEPcTest/: CMakeLists.txt  SLEPcTest.hpp
tests/SLEPcTestLNS/: CMakeLists.txt  SLEPcTest.hpp
tests/SLEPcTestLNS_helm/: CMakeLists.txt  SLEPcTest.hpp
tests/SLEPcTestRes/: CMakeLists.txt  SLEPcTest.hpp  SLEPcTest_copy.hpp
tests/SLEPcTestResRecep/: CMakeLists.txt  SLEPcTest.hpp  SLEPcTestLNSResRecep.cpp
tests/ScalapackDirectSolverTest/: CMakeLists.txt  ScalapackLU.cpp  ScalapackLU.hpp  ScalapackLU_Test.cpp
tests/SpectralIBLGF/: CMakeLists.txt  SLEPcTestATA_cross.hpp  SpectralIBLGF.cpp
tests/TwoVortexRings/: CMakeLists.txt  TwoVortRings.cpp  TwoVortRings.hpp
tests/adaptivity/: CMakeLists.txt  adaptivity.cpp  adaptivity.hpp
tests/common_tree/: CMakeLists.txt  POD_2D.hpp  adapt_to_ref.cpp  adapt_to_ref_overlap_Test.cpp  common_tree-old.hpp  common_tree.cpp  common_tree.hpp  common_tree0.cpp  common_tree1.cpp  common_tree_overlap_Test.cpp  merge_trees.hpp  read_write_test.cpp  symfield_Test.cpp  symgrid.cpp  symgrid_Test.cpp  test_POD.cpp  test_POD_Test.cpp
tests/common_tree2D/: CMakeLists.txt  POD_2D.hpp  adapt_to_ref.cpp  adapt_to_ref_overlap_Test.cpp  common_tree.cpp  common_tree.hpp  common_tree_Test.cpp  restart_Test.cpp  symfield_Test.cpp  symgrid.cpp  symgrid_Test.cpp  test_POD_Test.cpp.old
tests/compute_mean2D/: CMakeLists.txt  compute_mean2D.cpp  compute_mean2D.hpp
tests/conv_test/: CMakeLists.txt  convFFTTest.cpp  convSingleBlockTest.cpp  convTest.cpp  convTest_gpu.cu  ffmTest.cpp
tests/convolution/: CMakeLists.txt  README.md  convolution_fft_gpu_test.cu  convolution_fft_test.cpp  convolution_gpu_test.cu  convolution_lgf_gpu_test.cu  convolution_lgf_test.cpp  convolution_test.cpp
tests/datafields/: CMakeLists.txt  block_descriptor.cpp  datafields.cpp  view.cpp
tests/domain_decomposition/: CMakeLists.txt  configFile  decomposition_test.hpp  domainTest.cpp
tests/googletest/: CMakeLists.txt  configFile  googletest.cpp
tests/hdf5_read/: CMakeLists.txt  config  hdf5_read.cpp  hdf5_read.hpp
tests/helmholtz/: CMakeLists.txt  configFile  vortexrings.hpp
tests/helmholtzFFT_operatorTest/: CMakeLists.txt  operatorTest.hpp  operators_helmholtzFFT.cpp
tests/helmholtz_FFT/: CMakeLists.txt  helmholtzFFT.cpp  vortexrings.hpp
tests/helmholtz_OMP/: CMakeLists.txt  helmholtz.cpp  vortexrings.hpp
tests/helmholtz_lgf/: CMakeLists.txt  helmholtz_lgf.cpp  vortexrings.hpp
tests/ibsolve/: .poisson.cpp.swo  CMakeLists.txt  ibsolve.cpp  ibsolve.hpp
tests/ifherk_heat/: CMakeLists.txt  config_2vrings  ifherk_heat.cpp  ifherk_heat.hpp  ns_amr_lgf.cpp
tests/ifherk_linear_test/: CMakeLists.txt  ifherk_linear2D.cpp  ifherk_linear2D.hpp  ifherk_linear2D.old  ifherk_linear2D.perturb.old
tests/lns_amr_lgf2D/: CMakeLists.txt  lns_amr_lgf.cpp  lns_amr_lgf.hpp  lns_amr_lgf_Test2D.cpp  lns_amr_lgf_adjoint.cpp  lns_amr_lgf_forcing.hpp  lns_amr_lgf_homo.cpp
tests/lns_amr_lgf2D_adjoint/: CMakeLists.txt  lns_amr_lgf_adjoint.cpp  lns_amr_lgf_adjoint.hpp  lns_amr_lgf_forcing_adjoint.hpp  lns_amr_lgf_homo_adjoint.cpp
tests/lns_stab_petsc/: CMakeLists.txt  lns_stab_petsc.cpp  lns_stab_petsc.hpp  lns_stab_petscTest.cpp
tests/lns_test_petsc/: CMakeLists.txt  lns_petsc_reshuffle.cpp  lns_test_petsc.cpp  lns_test_petsc.hpp
tests/norm_Poisson2D/: CMakeLists.txt  norm_vortexrings.hpp  poisson2D.cpp
tests/ns_amr_lgf/: CMakeLists.txt  configFile  configFile_30  ns_amr_lgf.hpp  ns_amr_lgf_Test.cpp  ns_amr_lgf_gpu.cu  ns_amr_lgf_gpu_Test.cu
tests/ns_amr_lgf2D/: CMakeLists.txt  ns_amr_lgf.hpp  ns_amr_lgf_Test2D.cpp
tests/ns_amr_lgf_gpu/: CMakeLists.txt  README.md  ns_amr_lgf.cpp  ns_amr_lgf.hpp  ns_amr_lgf_gpu.cu
tests/ns_amr_lgf_gpu_new/: CMakeLists.txt  ns_amr_lgf_cpu_debug.cpp  ns_amr_lgf_gpu_debug.hpp  ns_amr_lgf_gpu_new.cu  ns_amr_lgf_gpu_new_Test.cu
tests/ns_amr_lgf_helm/: CMakeLists.txt  CMakeLists.txt.stampede  ns_amr_lgf.hpp
tests/op_test2/: CMakeLists.txt  (+3 more)
(+506 files in other folders)
