#      ▄▄▄▄▄▄▄▄▄▄▄  ▄▄▄▄▄▄▄▄▄▄   ▄            ▄▄▄▄▄▄▄▄▄▄▄  ▄▄▄▄▄▄▄▄▄▄▄
#     ▐░░░░░░░░░░░▌▐░░░░░░░░░░▌ ▐░▌          ▐░░░░░░░░░░░▌▐░░░░░░░░░░░▌
#      ▀▀▀▀█░█▀▀▀▀ ▐░█▀▀▀▀▀▀▀█░▌▐░▌          ▐░█▀▀▀▀▀▀▀▀▀ ▐░█▀▀▀▀▀▀▀▀▀
#          ▐░▌     ▐░▌       ▐░▌▐░▌          ▐░▌          ▐░▌
#          ▐░▌     ▐░█▄▄▄▄▄▄▄█░▌▐░▌          ▐░▌ ▄▄▄▄▄▄▄▄ ▐░█▄▄▄▄▄▄▄▄▄
#          ▐░▌     ▐░░░░░░░░░░▌ ▐░▌          ▐░▌▐░░░░░░░░▌▐░░░░░░░░░░░▌
#          ▐░▌     ▐░█▀▀▀▀▀▀▀█░▌▐░▌          ▐░▌ ▀▀▀▀▀▀█░▌▐░█▀▀▀▀▀▀▀▀▀
#          ▐░▌     ▐░▌       ▐░▌▐░▌          ▐░▌       ▐░▌▐░▌
#      ▄▄▄▄█░█▄▄▄▄ ▐░█▄▄▄▄▄▄▄█░▌▐░█▄▄▄▄▄▄▄▄▄ ▐░█▄▄▄▄▄▄▄█░▌▐░▌
#     ▐░░░░░░░░░░░▌▐░░░░░░░░░░▌ ▐░░░░░░░░░░░▌▐░░░░░░░░░░░▌▐░▌
#      ▀▀▀▀▀▀▀▀▀▀▀  ▀▀▀▀▀▀▀▀▀▀   ▀▀▀▀▀▀▀▀▀▀▀  ▀▀▀▀▀▀▀▀▀▀▀  ▀

add_subdirectory (server_client)
add_subdirectory (datafields)
add_subdirectory (tree)
add_subdirectory (poisson)
add_subdirectory (operators)
add_subdirectory (ns_amr_lgf)
add_subdirectory (ns_amr_lgf2D)
add_subdirectory (postProcessIntrp)
add_subdirectory (ibsolve)
add_subdirectory (helmholtz_lgf)
add_subdirectory (helmholtz)
add_subdirectory (Poisson2D)
add_subdirectory (helmholtz_FFT)
add_subdirectory (operators_helmholtz)
add_subdirectory (helmholtzFFT_operatorTest)
add_subdirectory (operators_helmholtz_complex)
add_subdirectory (ns_amr_lgf_helm)
add_subdirectory (NewtonOperatorTest)
add_subdirectory (NewtonJacobianSolveTest)
add_subdirectory (NewtonIteration)
find_package(MKL CONFIG REQUIRED)
add_subdirectory (MKLSolverTest)
add_subdirectory (MKLPoissonTest)
add_subdirectory (MKLJacobian)